fixed aspect ratio by only keeping max-height; removed height 100% as it was messing up AR on mobile; also AR by default is auto (always fixed) OTH initial (sets it as auto at first, but for a fixed height 'initial' can change later)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,10 +94,6 @@ section {
 img {
     padding: 1em;
     border-radius: 6%;
-    /* max-width: 100%;
-    height: auto;     */
-    aspect-ratio: initial;
-    height: 100%;
     max-height: 650px;
 }
 
